# epic_hD

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
scripts/GRCm39/: 00_download_gencode_m38.sh  01_build_annotation.sh  02_build_bed12.sh  03_build_genomic_annotations.sh  04_build_gene_map.R  10_prepare_salmon_inputs.sh  11_build_salmon_index.sh  12_build_salmon_digest.R  20_build_star_index.sh
scripts/GRCm39 copy/: README.md  aa_download_UCSC_mm39.smk  ac_get_CpGs_loc.smk  ad_get_nCs_context_chr.ipynb  annotate_regions.sh  ba_dowload_GENCODE_mm39.smk  bb_star_salmon_mm39_prep.smk  bc_gtf_mm39_bed12_prep.smk  bd_create_salmon_digest.R  test_chrM.sh
scripts/GRCm39 copy/bash_scripts_smk_pipelines/: run_aa_download_UCSC_mm39.sh  run_ba_dowload_GENCODE_mm39.sh
scripts/GRCm39_old/: _config.yml  ab_bismark_mm39_prep.smk  ca_build_mm39_annotations.sh  debug.sh
src/annotation_reference/: utils.R
src/io/: io.R  io_bed.py  utils.py
src/methylation/Me_EdgeR/: a1_cov2sgCpG_DGE.R  a2_get_CpGs_DGE.R  a3_clean_DGE.R  b1_sgCpG_per_cov.R  b2_pair_CpGs_dge.R  b2_pair_CpGs_se.R  b3_sgCpG2region.R  c1_MeUn2MePe.R  c2_clean_MePer.R  c3_strict_CpGs.R  c4_interest_CpGs.R  c5_mapNA_SE2DGE.R  d1_dma.R  d2_sva.R  plot_meth_level.R  qc_coverage_breadth_plots.R  qc_coverage_depth_plots.R  qc_cpg_symmetry.R  qc_region.R  utils_dma.R  utils_dma_2.R  z4_MePe2MBval.R
src/methylation/pyformME/: __init__.py  a_fasta2CpG.py  a_refCpGs_process.py  b_bam2MEmat.py  b_bam_process.py  c_informME.py  (+17 more)
src/reference/: annotate_regions_cpg_context.sh  ba_create_digest.R  utils.R
(+10 files in other folders)
